upgrade to Nuxt 3.10.1, correcting footer overflow, correcting nav md style, testing bg correction for mobile

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -25,6 +25,13 @@ body {
 
 @media screen and (min-width: 640px) {
   #bg-image, .__bg-image {
+    background-position: bottom -20vh left 25vw;
+    background-size: 80vw;
+  }
+}
+
+@media screen and (min-width: 1280px) {
+  #bg-image, .__bg-image {
     background-position: bottom -50vh left 33vw;
     background-size: 80vw;
   }
